fix compound operator list